--- a/Day9/main.html
+++ b/Day9/main.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <script src="./level1.js"></script>
+    <script src="./level2.js"type="module"></script>
+    <script src="./countries.js"></script>
 </body>
 </html>
